<resources>
    <string name="app_name">Allahabad Tourism</string>
    <string name="activities_karting">Go Karting</string>
    <string name="activities_segway">Segway Tour</string>
    <string name="activities_motoring">Para Motoring</string>
    <string name="activities_vegas">Gaming Vegas</string>
    <string name="activities_camping">Camping</string>
    <string name="activities_skating">Ice Skating</string>
    <string name="activities_trekking">Trekking</string>
    <string-array name="activities_name">
        <item>Para Motoring</item>
        <item>Go Karting</item>
        <item>Segway Tour</item>
        <item>Camping</item>
        <item>Gaming Vegas</item>
        <item>Ice Skating</item>
        <item>Trekking</item>
    </string-array>
    <string-array name="activities_short_desc">
        <item>Allahabad</item>
        <item>5-storey victory tower with balconies</item>
        <item>Palatial 16th-century tomb of Humayun</item>
        <item>1920s triumphal arch and war memorial</item>
        <item>Vast, 17th-century Mughal-style mosque</item>
        <item>Temple with a flower-like design</item>
        <item>18th-century astronomy complex</item>
    </string-array>
    <string name="what">What?</string>
    <string name="when">When?</string>
    <string name="where">Where?</string>
    <string name="maps">Open in maps</string>
    <string name="how_much">How Much?</string>
    <string-array name="activities_what">
        <item>
            &#8226; Enjoy a session of paramotoring which lets you fly in the sky like a bird with the help of a paramotor.\n
            &#8226; Get magnificent views of the surroundings from a height as you get clicked by a professional.\n
            &#8226; You can also enjoy other activities like Burma Bridge and Pool Table along with cake cutting
        </item>
        <item>
            &#8226; A pool table is also present in the premises.\n
            &#8226; All participants are given a 5 minute briefing before entering the circuit.\n
            &#8226; Free wi-fi.\n
            &#8226; One-of-a-kind indoor circuit.\n
            &#8226; Shoe racks and lockers are available for the customers.\n
            &#8226; Sky Karting offers a world-class racing track by a Spain and Germany based firm Protex Karting.\n
            &#8226; The go-karting circuit has a brew-pub right below it.\n
        </item>
        <item>
            &#8226; A unique mode of exploring historic buildings, monuments and memorials.\n
            &#8226; Safety gear and trained instructors.\n
        </item>
        <item>
            &#8226; Enjoy a fun-filled camping session with various games and activities for 8 hours in Gurgaon.\n
            &#8226; The camp is ideal for those who want to spend a delightful time with a group of friends or family.\n
            &#8226; This 8 hour camp also includes lunch and evening tea with snacks.\n
        </item>
        <item>
            &#8226; Bowling Shoes and Socks are compulsory on the lanes. Shoe Rental: Rs.30/Per Game, Socks: Rs.40 to be paid directly to the merchant.\n
            &#8226; Play the game of bowling in a UV light experience.\n
            &#8226; Play the game on amazing UV lit Michael Jackson, Marilyn Monroe, Elvis Presley and Evil Knievel bowling lanes.\n
        </item>
        <item>
            &#8226; GA safety guidelines and training session takes place before each round of skating.\n
            &#8226; A souvenir shop for photographs, T-shirts, etc. is available.\n
            &#8226; Children are provided warm clothing if they feel too cold.\n
            &#8226; Lockers and changing room facilities are available.\n
            &#8226; Professional guides are available at all times.\n
            &#8226; Professional medical assistance is available at all times.\n
            &#8226; Socks are on sale in case one feels too cold.\n
            &#8226; The key attractions are a natural ice rink, an in-house DJ, sound and light audio systems.\n
            &#8226; There is a fully operational bar and food station available.\n
            &#8226; iSKATE is India\'s first natural ice skating rink and café.\n
        </item>
        <item>
            &#8226; Enjoy the scenic beauty of the place while doing this activity.\n
            &#8226; Enjoy this adventure with your family and friends along with a expert guide.\n
            &#8226; Relax after a tiring day in the tents provided by the company.\n
        </item>
    </string-array>
    <string-array name="activities_when">
        <item>All Days, From 05:30AM</item>
        <item>Monday to Friday, 12:00PM to 11:00PM</item>
        <item>All Days, From 05:15AM</item>
        <item>All Days, From 10:00AM</item>
        <item>All Days, 11:00AM to 09:00PM</item>
        <item>All Days, 10:00AM to 09:00PM</item>
        <item>All Days, From 07:00AM</item>
    </string-array>
    <string-array name="activities_how_much">
        <item>Couple : ₹8999</item>
        <item>Adult and Child : ₹415</item>
        <item>Adult and Child : ₹2000</item>
        <item>Adult : ₹930, Child : ₹650</item>
        <item>Adult and Child : ₹299</item>
        <item>Adult and Child : ₹499</item>
        <item>Adult and Child : ₹1199</item>
    </string-array>
    <string-array name="activities_where">
        <item>geo:28.237282,77.149235?q=westin</item>
        <item>geo:28.5014869,76.9669686?q=oysters</item>
        <item>geo:28.612912,77.227321?q=segway</item>
        <item>geo:28.340102,77.0080163?q=camp</item>
        <item>geo:28.5742369,77.3509628?q=gaming</item>
        <item>geo:28.5033081,77.0953191?q=iskate</item>
        <item>geo:28.5033036,77.0624882?q=village</item>
    </string-array>
    <string name="description">Description</string>
</resources>