<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.allahabadtourism.activities.ActivityDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height">

                <TextView
                    android:id="@+id/text_activities_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Name"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/toolbar_text_size" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ImageView
            android:id="@+id/image_list_activities"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_act_details_height"
            android:scaleType="centerCrop" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="@dimen/padding_act_details">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailTextHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/what" />

                    <Button
                        android:id="@+id/button_speak_what"
                        style="@style/MapsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_volume_up_black" />


                </LinearLayout>

                <TextView
                    android:id="@+id/textView_what"
                    style="@style/DetailActivityTextContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="What" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/DetailTextHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/when" />

                <Button
                    android:id="@+id/button_speak_when"
                    style="@style/MapsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_volume_up_black" />
</LinearLayout>
                <TextView
                    android:id="@+id/textView_when"
                    style="@style/DetailActivityTextContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="When" />

                <TextView
                    style="@style/DetailTextHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/where" />

                <Button
                    android:id="@+id/button_maps"
                    style="@style/MapsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maps" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/DetailTextHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_much" />

                <Button
                    android:id="@+id/button_speak_howmuch"
                    style="@style/MapsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_volume_up_black" />

</LinearLayout>
                <TextView
                    android:id="@+id/textView_howmuch"
                    style="@style/DetailActivityTextContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="HowMuch" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
